# srdwm

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  LICENSE  Makefile  README.md
.github/workflows/: macos.yml  windows.yml
cmake/: Config.cmake.in  Uninstall.cmake.in
cmake/macos/: Info.plist.in  Uninstall.cmake.in
cmake/toolchains/: mingw-w64-x86_64.cmake
config/: srdwm.conf
config/srd/: cross_platform_test.lua  init.lua  keybindings.lua  test_decorations.lua
docs/: DEFAULTS.md  GUI_SETTINGS.md  IMPLEMENTATION_STATUS.md  PLATFORM_IMPLEMENTATION.md
scripts/: bootstrap.sh  install_deps_alpine.sh  install_deps_arch.sh  install_deps_fedora.sh  install_deps_macos.sh  install_deps_opensuse.sh  install_deps_ubuntu.sh  install_deps_windows_vcpkg.ps1
src/: main.cc
src/config/: config_manager.h  lua_manager.cc  lua_manager.h
src/core/: event_system.cc  event_system.h  window.cc  window.h  window_manager.cc  window_manager.h
src/input/: input_handler.h
src/layouts/: dynamic_layout.cc  dynamic_layout.h  layout.h  layout_engine.cc  layout_engine.h  smart_placement.cc  smart_placement.h  tiling_layout.cc  tiling_layout.h
src/platform/: linux_platform.h  macos_platform.cc  macos_platform.h  platform.h  platform_factory.cc  platform_factory.h  wayland_platform.cc  wayland_platform.h  wayland_platform_stub.cc  windows_platform.cc  windows_platform.h  x11_platform.cc  x11_platform.h
src/utils/: logger.cc  logger.h
tests/: CMakeLists.txt  test_cross_platform_integration.cc  test_lua_manager.cc  test_macos_platform.cc  test_platform_factory.cc  test_smart_placement.cc  test_wayland_platform.cc  test_windows_platform.cc  test_x11_platform.cc
